
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ flip; } ;


 int SceneRenderActor (size_t) ;
 int TRUE ;
 TYPE_1__* actors ;
 size_t script_actor ;
 scalar_t__* script_cmd_args ;
 scalar_t__ script_cmd_args_len ;
 int script_continue ;
 int script_ptr ;

void Script_ActorSetFlip_b()
{
  actors[script_actor].flip = 0;
  actors[script_actor].flip = script_cmd_args[0];
  SceneRenderActor(script_actor);
  script_ptr += 1 + script_cmd_args_len;
  script_continue = TRUE;
}
